<resources>
    <string name="app_name">Shows</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="logo">Logo</string>
    <string name="you_are_in">You\'re in!</string>
    <string name="shows">Shows</string>
    <string name="episodes">Episodes</string>
    <string name="add_episode">Add episode</string>
    <string name="episode_title">Episode title</string>
    <string name="episode_description">Episode description</string>
    <string name="save">Save</string>
    <string name="wake_him_up">Someone has fallen asleep.\nDon’t wake him up.</string>
    <string name="add_some_episodes">Add some episodes</string>
    <string name="remember_me">Remember me</string>
    <string name="upload_photo">Upload photo</string>
    <string name="change_photo">Change photo</string>
    <string name="season_and_episode"><![CDATA[Season & episode]]></string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_again">Password again</string>
    <string name="episode_number">S 01, E 01</string>
    <string name="shows_small">shows</string>
    <string name="select_number">Select number</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add a comment...</string>
    <string name="post">Post</string>
    <string name="no_comments">Sorry, we don’t have comments yet.\nBe first who will write a review.</string>
</resources>
