<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    tools:context=".AddEpisodeActivity">

    <ImageView
        android:id="@+id/addImageCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addToolbar" />

    <TextView
        android:id="@+id/addTextUploadImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/upload_photo"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textAlignment="center"
        android:fontFamily="@font/karla_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addImageCamera" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addGuideUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="464dp"
        app:layout_constraintTop_toBottomOf="@id/addTextUploadImage" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/add_episode" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addLayoutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addGuideUpper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/episode_title"
            android:inputType="text"
            android:paddingBottom="25dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addLayoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addLayoutTitle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addEditDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/episode_description"
            android:inputType="text"
            android:paddingBottom="25dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addButtonSave"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_round_pink_states"
        android:enabled="false"
        android:fontFamily="@font/karla_bold"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>