<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shows.add.NumberPickerDialog"
    android:paddingHorizontal="50dp"
    android:paddingVertical="30dp">

    <TextView
        android:id="@+id/dialogTextSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season"
        app:layout_constraintEnd_toStartOf="@id/dialogTextEpisode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="50dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:fontFamily="@font/karla_bold"/>

    <NumberPicker
        android:id="@+id/dialogPickerSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/dialogTextSeason"
        app:layout_constraintStart_toStartOf="@+id/dialogTextSeason"
        app:layout_constraintTop_toBottomOf="@+id/dialogTextSeason"
        android:layout_marginTop="16dp"
        android:theme="@style/AppTheme.NumberPicker" />

    <TextView
        android:id="@+id/dialogTextEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialogTextSeason"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:fontFamily="@font/karla_bold"/>

    <NumberPicker
        android:id="@+id/dialogPickerEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/dialogTextEpisode"
        app:layout_constraintStart_toStartOf="@+id/dialogTextEpisode"
        app:layout_constraintTop_toBottomOf="@+id/dialogTextEpisode"
        android:layout_marginTop="16dp"
        android:theme="@style/AppTheme.NumberPicker"/>

    <TextView
        android:id="@+id/dialogPickerSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_bold"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogPickerEpisode"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>