<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shows.episode.comments.CommentsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/commentsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:theme="@style/AppTheme.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/comments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/commentsInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentsToolbar"
        tools:visibility="invisible" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/commentsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="commentsImage,commentsTextEmpty" />

    <ImageView
        android:id="@+id/commentsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_img_placehoder_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentsToolbar"
        app:layout_constraintBottom_toTopOf="@id/commentsTextEmpty"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/commentsTextEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/no_comments"
        android:textAlignment="center"
        android:textSize="16sp"
        android:lineSpacingExtra="7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentsImage"
        app:layout_constraintBottom_toTopOf="@id/commentsInputField"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentsInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_round_border_grey"
        android:orientation="vertical">

        <EditText
            android:id="@+id/commentsEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/commentsTextPost"
            android:background="@null"
            android:hint="@string/add_comment"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:imeOptions="actionSend"/>

        <TextView
            android:id="@+id/commentsTextPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"
            android:text="@string/post"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/karla_bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>