<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".AddEpisodeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/add_episode" />

    <ScrollView
        android:id="@+id/addScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/addButtonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/addGroupEpisodePlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="addImageCamera,addTextUploadImage" />

            <ImageView
                android:id="@+id/addImageCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toTopOf="@id/addTextUploadImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/addTextUploadImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla_bold"
                android:paddingVertical="16dp"
                android:text="@string/upload_photo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/addGuideUpper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addImageCamera" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/addGroupEpisodeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="addImageEpisode,addTextChangeImage" />

            <ImageView
                android:id="@+id/addImageEpisode"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:paddingTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/addTextChangeImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/addTextChangeImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla_bold"
                android:paddingVertical="16dp"
                android:text="@string/change_photo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/addGuideUpper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addImageEpisode" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/addGuideUpper"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addLayoutTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addGuideUpper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addEditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/episode_title"
                    android:inputType="text"
                    android:paddingBottom="25dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addLayoutDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addLayoutTitle">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addEditDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/episode_description"
                    android:inputType="text"
                    android:paddingBottom="25dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/addButtonSave"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_round_pink_states"
        android:enabled="false"
        android:fontFamily="@font/karla_bold"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>